Locked overflow-x to hidden to prevent slight horizontal scroll

--- a/src/App.css
+++ b/src/App.css
@@ -23,6 +23,7 @@ body {
   color: var(--dark-text) !important;
   font-family: var(--font-secondary), monospace;
   font-size: var(--font-size);
+  overflow-x: hidden;
 }
 
 header {
